force-app/main/default/objects/Opportunity/fields/Closed_By_User__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_User__c</fullName>
    <label>Closed By User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>