force-app/main/default/objects/Opportunity/fields/Closed_Won_Day_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Day_Time__c</fullName>
    <label>Closed Won Date/Time</label>
    <type>DateTime</type>
</CustomField>