force-app/main/default/objects/Opportunity/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>+61</fullName>
            </value>
            <value>
                <fullName>+65</fullName>
            </value>
            <value>
                <fullName>+86</fullName>
            </value>
            <value>
                <fullName>+91</fullName>
            </value>
            <value>
                <fullName>+852</fullName>
            </value>
            <value>
                <fullName>+971</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>