force-app/main/default/objects/Opportunity/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <label>Customer Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Business</fullName>
            </value>
            <value>
                <fullName>Refer to Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>