force-app/main/default/objects/Opportunity/fields/Department_NameFormula__c.field-meta.xml
<CustomField>
    <fullName>Department_NameFormula__c</fullName>
    <description>Formula field to showcase in the layout</description>
    <formula>TEXT( Department_Name__c )</formula>
    <label>Department Name</label>
    <type>Text</type>
</CustomField>