force-app/main/default/objects/Opportunity/fields/DepartmentName_For_Backend__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName_For_Backend__c</fullName>
    <description>This is going to have value from the lead picklist field &apos;Department&apos;</description>
    <label>Department Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>