force-app/main/default/objects/Opportunity/fields/Final_Quote_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote_Document_ID__c</fullName>
    <label>Final Quote Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>