force-app/main/default/objects/Opportunity/fields/isParent__c.field-meta.xml
<CustomField>
    <fullName>isParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isParent</label>
    <type>Checkbox</type>
</CustomField>