force-app/main/default/objects/Opportunity/fields/L1_Bidder_Declared__c.field-meta.xml
<CustomField>
    <fullName>L1_Bidder_Declared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 Bidder Declared</label>
    <type>Checkbox</type>
</CustomField>