force-app/main/default/objects/Opportunity/fields/Lead_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Type__c</fullName>
    <formula>Lead__r.Source_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source Type</label>
    <type>Text</type>
</CustomField>