force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Future Prospect</fullName>
            </value>
            <value>
                <fullName>Not responding</fullName>
            </value>
            <value>
                <fullName>Minimum Quantity not met</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Internal Problem</fullName>
            </value>
            <value>
                <fullName>Purchased from Other Brands</fullName>
            </value>
            <value>
                <fullName>Rate Issue</fullName>
            </value>
            <value>
                <fullName>Tender lost</fullName>
            </value>
            <value>
                <fullName>Customer details not received</fullName>
            </value>
            <value>
                <fullName>Price Enquiry</fullName>
            </value>
            <value>
                <fullName>Out of Service Area</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Freight Issue</fullName>
                <isActive>false</isActive>
                <label>Freight Issue</label>
            </value>
            <value>
                <fullName>Not Responding After Negotiation</fullName>
                <isActive>false</isActive>
                <label>Not Responding After Negotiation</label>
            </value>
            <value>
                <fullName>Purchased from Other Brand</fullName>
                <isActive>false</isActive>
                <label>Purchased from Other Brand</label>
            </value>
            <value>
                <fullName>Technical Details Not received</fullName>
                <isActive>false</isActive>
                <label>Technical Details Not received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>