force-app/main/default/objects/Opportunity/fields/Nurture_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Negotiation__c</fullName>
    <label>Nurture/Negotiation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>