force-app/main/default/objects/Opportunity/fields/Nurture_Stage_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Stage_Entry_Date__c</fullName>
    <label>Nurture Stage Entry Date</label>
    <type>DateTime</type>
</CustomField>