force-app/main/default/objects/Opportunity/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK(
&quot;https://momentum-customer-397--utkarshuat.sandbox.lightning.force.com/lightning/r/Opportunity/&quot; &amp; Id &amp; &quot;/view&quot;,
&quot;View Opportunity&quot;,
&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>