force-app/main/default/objects/Opportunity/fields/Opportunity_Name_formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_formula__c</fullName>
    <formula>Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>