force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_formula__c</fullName>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>