force-app/main/default/objects/Opportunity/fields/Opportunity_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity RecordType Name</label>
    <type>Text</type>
</CustomField>