force-app/main/default/objects/Opportunity/fields/Po_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Po_Upload_Status__c</fullName>
    <label>Po Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started Yet</fullName>
                <default>true</default>
                <label>Not Started Yet</label>
            </value>
            <value>
                <fullName>Uploaded Successfully</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>