force-app/main/default/objects/Opportunity/fields/Price_Calculation_JSON__c.field-meta.xml
<CustomField>
    <fullName>Price_Calculation_JSON__c</fullName>
    <description>Serialized JSON state of the PEB Price Calculation generated from the uploaded Estimation.pdf. Written by the PEB Price Calculator LWC and read by the PDF renderer.</description>
    <label>Price Calculation JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>