force-app/main/default/objects/Opportunity/fields/Refer_to_Dealer_PO_upload__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Dealer_PO_upload__c</fullName>
    <label>Refer to Dealer PO upload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PO is required</fullName>
            </value>
            <value>
                <fullName>Delivery from stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>