force-app/main/default/objects/Opportunity/fields/Stage_Qualified_From__c.field-meta.xml
<CustomField>
    <fullName>Stage_Qualified_From__c</fullName>
    <label>Stage Qualified From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>