force-app/main/default/objects/Opportunity/fields/Tender__c.field-meta.xml
<CustomField>
    <fullName>Tender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender</label>
    <referenceTo>Tender__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>