force-app/main/default/objects/Opportunity/recordTypes/Master_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Master_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <label>Master Opportunity</label>
</RecordType>