force-app/main/default/objects/Opportunity/recordTypes/Tender_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Tender_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity Sales Process</businessProcess>
    <label>Tender Opportunity</label>
</RecordType>