force-app/main/default/objects/Opportunity/validationRules/Refer_to_Dealer_cant_move_to_Negotiation.validationRule-meta.xml
<ValidationRule>
    <fullName>Refer_to_Dealer_cant_move_to_Negotiation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Negotiation&quot;),
    ISPICKVAL(Customer_Journey__c, &quot;Refer to Dealer&quot;),
    RecordType.DeveloperName = &quot;Master_Opportunity&quot;
)</errorConditionFormula>
    <errorDisplayField>Customer_Journey__c</errorDisplayField>
    <errorMessage>Its already Refer to the Dealer</errorMessage>
</ValidationRule>