force-app/main/default/objects/Opportunity/listViews/Department_Crash_Barrier_Products.listView-meta.xml
<ListView>
    <fullName>Department_Crash_Barrier_Products</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Crash Barrier Products</value>
    </filters>
    <label>Department - Crash Barrier Products</label>
</ListView>