force-app/main/default/objects/Opportunity/listViews/Dept_Pre_Engineering_Buildings_Product.listView-meta.xml
<ListView>
    <fullName>Dept_Pre_Engineering_Buildings_Product</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Pre Engineering Building</value>
    </filters>
    <label>Dept - Pre Engineering Buildings Product</label>
</ListView>