force-app/main/default/objects/Opportunity/listViews/Dept_Railway_Electrification_Structure.listView-meta.xml
<ListView>
    <fullName>Dept_Railway_Electrification_Structure</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department_Name__c</field>
        <operation>equals</operation>
        <value>Railway Electrification Structure Products</value>
    </filters>
    <label>Dept - Railway Electrification Structure</label>
</ListView>